--- a/todoloc/AddTodoViewController.xib
+++ b/todoloc/AddTodoViewController.xib
@@ -6,76 +6,91 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddTodoViewController" customModule="todoloc" customModuleProvider="target">
             <connections>
-                <outlet property="changeTitreTextField" destination="9K8-Ir-2Zn" id="1Fp-Qs-wWG"/>
-                <outlet property="mapView" destination="Cmz-4D-8FH" id="kxs-vX-kFJ"/>
+                <outlet property="changeTitreTextField" destination="WUn-Ue-i0Q" id="vbV-t6-7hO"/>
+                <outlet property="detailListView" destination="yJr-FP-z5P" id="N6Q-iJ-YwJ"/>
                 <outlet property="searchDisplayController" destination="Ayf-oQ-mdX" id="aDP-3a-rBr"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="textFieldDetail" destination="2sv-Vz-bBT" id="W7v-0Y-7oJ"/>
+                <outlet property="view" destination="Axp-R6-mFt" id="Qls-Bk-TGZ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titre" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NE7-jD-05m">
-                    <rect key="frame" x="16" y="72" width="46.5" height="29"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cmz-4D-8FH">
-                    <rect key="frame" x="16" y="474" width="343" height="165"/>
-                </mapView>
-                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="XGk-zH-O0I">
-                    <rect key="frame" x="16" y="247" width="343" height="56"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="CMV-Oj-utA"/>
-                    </connections>
-                </searchBar>
-                <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9K8-Ir-2Zn">
-                    <rect key="frame" x="16" y="109" width="343" height="30"/>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <action selector="changeTitre:forEvent:" destination="-1" eventType="editingChanged" id="7Pi-dV-eyg"/>
-                        <action selector="changeTitreV2:" destination="-1" eventType="touchDown" id="wke-ye-dBy"/>
-                    </connections>
-                </textField>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="XGk-zH-O0I" secondAttribute="trailing" constant="16" id="0wR-qL-GaB"/>
-                <constraint firstItem="9K8-Ir-2Zn" firstAttribute="top" secondItem="NE7-jD-05m" secondAttribute="bottom" constant="36" id="Ey5-t2-3wr"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9K8-Ir-2Zn" secondAttribute="trailing" constant="16" id="H10-dj-sdC"/>
-                <constraint firstItem="Cmz-4D-8FH" firstAttribute="top" secondItem="XGk-zH-O0I" secondAttribute="bottom" constant="171" id="Mbc-wO-19p"/>
-                <constraint firstItem="9K8-Ir-2Zn" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="N70-Ms-OLk"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Cmz-4D-8FH" secondAttribute="bottom" constant="28" id="Ubr-zL-Uw1"/>
-                <constraint firstItem="Cmz-4D-8FH" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="bYl-Hq-AIi"/>
-                <constraint firstItem="NE7-jD-05m" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="52" id="o3q-Dx-JG8"/>
-                <constraint firstItem="XGk-zH-O0I" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="q4F-s9-nMU"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Cmz-4D-8FH" secondAttribute="trailing" constant="16" id="rg3-kK-8rr"/>
-                <constraint firstItem="XGk-zH-O0I" firstAttribute="top" secondItem="9K8-Ir-2Zn" secondAttribute="bottom" constant="80" id="sFK-FN-cr6"/>
-                <constraint firstItem="NE7-jD-05m" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="tCp-zu-wbK"/>
-            </constraints>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="34.5" y="54.5"/>
-        </view>
         <searchDisplayController id="Ayf-oQ-mdX">
             <connections>
                 <outlet property="delegate" destination="-1" id="vUf-Ts-aSu"/>
-                <outlet property="searchBar" destination="XGk-zH-O0I" id="dZQ-BK-V6v"/>
                 <outlet property="searchContentsController" destination="-1" id="9BK-3s-Y5F"/>
                 <outlet property="searchResultsDataSource" destination="-1" id="mgT-Zu-btx"/>
                 <outlet property="searchResultsDelegate" destination="-1" id="Ibx-IM-TRv"/>
             </connections>
         </searchDisplayController>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Axp-R6-mFt">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Titre" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RuN-0m-uKm">
+                    <rect key="frame" x="16" y="72" width="47" height="29"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WUn-Ue-i0Q">
+                    <rect key="frame" x="16" y="137" width="343" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1FQ-US-7U2">
+                    <rect key="frame" x="20" y="205" width="72" height="29"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2sv-Vz-bBT">
+                    <rect key="frame" x="20" y="263" width="227" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EGg-7L-Kr3">
+                    <rect key="frame" x="298" y="263" width="50" height="30"/>
+                    <state key="normal" title="Ajouter"/>
+                    <connections>
+                        <action selector="addDetail:" destination="-1" eventType="touchUpInside" id="ZQE-mg-zT4"/>
+                    </connections>
+                </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yJr-FP-z5P">
+                    <rect key="frame" x="20" y="344" width="328" height="323"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+            </subviews>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="2sv-Vz-bBT" firstAttribute="top" secondItem="1FQ-US-7U2" secondAttribute="bottom" constant="29" id="1YS-DA-uJl"/>
+                <constraint firstItem="EGg-7L-Kr3" firstAttribute="top" secondItem="2sv-Vz-bBT" secondAttribute="top" id="5YE-Re-9cM"/>
+                <constraint firstItem="1FQ-US-7U2" firstAttribute="top" secondItem="WUn-Ue-i0Q" secondAttribute="bottom" constant="38" id="7Ek-Av-vCq"/>
+                <constraint firstItem="ngw-td-c9v" firstAttribute="trailing" secondItem="RuN-0m-uKm" secondAttribute="trailing" constant="312.5" id="HiT-AR-CoR"/>
+                <constraint firstItem="yJr-FP-z5P" firstAttribute="top" secondItem="2sv-Vz-bBT" secondAttribute="bottom" constant="51" id="P9o-3D-0ff"/>
+                <constraint firstItem="1FQ-US-7U2" firstAttribute="leading" secondItem="yJr-FP-z5P" secondAttribute="leading" id="UOL-yG-pXW"/>
+                <constraint firstItem="yJr-FP-z5P" firstAttribute="bottom" secondItem="ngw-td-c9v" secondAttribute="bottom" id="URj-FX-8fq"/>
+                <constraint firstItem="RuN-0m-uKm" firstAttribute="top" secondItem="ngw-td-c9v" secondAttribute="top" constant="52" id="V0y-g7-8kN"/>
+                <constraint firstItem="yJr-FP-z5P" firstAttribute="trailing" secondItem="EGg-7L-Kr3" secondAttribute="trailing" id="Vum-XL-hHs"/>
+                <constraint firstItem="EGg-7L-Kr3" firstAttribute="leading" secondItem="2sv-Vz-bBT" secondAttribute="trailing" constant="51" id="dVJ-D8-YrV"/>
+                <constraint firstItem="WUn-Ue-i0Q" firstAttribute="leading" secondItem="RuN-0m-uKm" secondAttribute="leading" id="eJD-Zd-eoE"/>
+                <constraint firstItem="WUn-Ue-i0Q" firstAttribute="trailing" secondItem="Axp-R6-mFt" secondAttribute="trailingMargin" id="l1T-D9-YGU"/>
+                <constraint firstItem="1FQ-US-7U2" firstAttribute="leading" secondItem="ngw-td-c9v" secondAttribute="leading" constant="20" id="lO8-WH-paS"/>
+                <constraint firstItem="RuN-0m-uKm" firstAttribute="leading" secondItem="ngw-td-c9v" secondAttribute="leading" constant="16" id="qen-F6-dfB"/>
+                <constraint firstItem="ngw-td-c9v" firstAttribute="trailing" secondItem="yJr-FP-z5P" secondAttribute="trailing" constant="27" id="uXX-Wd-YvH"/>
+                <constraint firstItem="WUn-Ue-i0Q" firstAttribute="top" secondItem="RuN-0m-uKm" secondAttribute="bottom" constant="36" id="vno-Fs-mFY"/>
+                <constraint firstItem="1FQ-US-7U2" firstAttribute="leading" secondItem="2sv-Vz-bBT" secondAttribute="leading" id="xqc-Qh-DvJ"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="ngw-td-c9v"/>
+            <point key="canvasLocation" x="34.5" y="54.5"/>
+        </view>
     </objects>
 </document>
