--- a/todoloc/ElementsListViewController.xib
+++ b/todoloc/ElementsListViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ElementsListViewController" customModule="todoloc" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="0Uu-Me-J2b" id="GZN-Fa-hyx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
